A9_20CS60R23/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> moviename simMov whereTowatch storyline language director producer writer boxoffice runtime crew
Rule 2     start -> highestRated lowestRated birthday exception movieList
Rule 3     start -> highestRated lowestRated birthday movieList
Rule 4     moviename -> LMOVIE
Rule 5     moviename -> epsilon
Rule 6     simMov -> simMov dmov
Rule 7     simMov -> dmov
Rule 8     dmov -> similarMovLink similarMov
Rule 9     dmov -> similarMovLink epsilon
Rule 10    dmov -> epsilon similarMov
Rule 11    whereTowatch -> whereTowatch dwatch
Rule 12    whereTowatch -> dwatch
Rule 13    dwatch -> onlineplatform
Rule 14    dwatch -> epsilon
Rule 15    storyline -> LSTORY
Rule 16    storyline -> epsilon
Rule 17    language -> LLANGUAGE
Rule 18    language -> epsilon
Rule 19    director -> director dval
Rule 20    director -> dval
Rule 21    dval -> LDIR
Rule 22    dval -> epsilon
Rule 23    producer -> lprod producer
Rule 24    producer -> lprod
Rule 25    writer -> separator lwrite writer
Rule 26    writer -> lwrite writer
Rule 27    writer -> lwrite
Rule 28    lwrite -> CELEBRITY
Rule 29    lwrite -> epsilon
Rule 30    lprod -> CELEBRITY
Rule 31    lprod -> epsilon
Rule 32    boxoffice -> BOXOFFICE
Rule 33    boxoffice -> epsilon
Rule 34    runtime -> RUNTIME
Rule 35    runtime -> epsilon
Rule 36    crew -> crew lcast
Rule 37    crew -> lcast
Rule 38    lcast -> LINK ACTUALNAME CHARNAME
Rule 39    lcast -> LINK ACTUALNAME epsilon
Rule 40    lcast -> LINK epsilon CHARNAME
Rule 41    lcast -> epsilon ACTUALNAME CHARNAME
Rule 42    lcast -> epsilon ACTUALNAME epsilon
Rule 43    highestRated -> HIGHF
Rule 44    highestRated -> epsilon
Rule 45    lowestRated -> LOWF
Rule 46    lowestRated -> epsilon
Rule 47    birthday -> BDATE
Rule 48    birthday -> epsilon
Rule 49    exception -> CELEBRITY
Rule 50    movieList -> mlist movieList
Rule 51    movieList -> mlist
Rule 52    mlist -> MOVIELIST MYEAR
Rule 53    mlist -> MOVIELIST epsilon
Rule 54    mlist -> epsilon MYEAR
Rule 55    epsilon -> <empty>

Terminals, with rules where they appear

ACTUALNAME           : 38 39 41 42
BDATE                : 47
BOXOFFICE            : 32
CELEBRITY            : 28 30 49
CHARNAME             : 38 40 41
HIGHF                : 43
LDIR                 : 21
LINK                 : 38 39 40
LLANGUAGE            : 17
LMOVIE               : 4
LOWF                 : 45
LSTORY               : 15
MOVIELIST            : 52 53
MYEAR                : 52 54
RUNTIME              : 34
error                : 
onlineplatform       : 13
separator            : 25
similarMov           : 8 10
similarMovLink       : 8 9

Nonterminals, with rules where they appear

birthday             : 2 3
boxoffice            : 1
crew                 : 1 36
director             : 1 19
dmov                 : 6 7
dval                 : 19 20
dwatch               : 11 12
epsilon              : 5 9 10 14 16 18 22 29 31 33 35 39 40 41 42 42 44 46 48 53 54
exception            : 2
highestRated         : 2 3
language             : 1
lcast                : 36 37
lowestRated          : 2 3
lprod                : 23 24
lwrite               : 25 26 27
mlist                : 50 51
movieList            : 2 3 50
moviename            : 1
producer             : 1 23
runtime              : 1
simMov               : 1 6
start                : 0
storyline            : 1
whereTowatch         : 1 11
writer               : 1 25 26

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . moviename simMov whereTowatch storyline language director producer writer boxoffice runtime crew
    (2) start -> . highestRated lowestRated birthday exception movieList
    (3) start -> . highestRated lowestRated birthday movieList
    (4) moviename -> . LMOVIE
    (5) moviename -> . epsilon
    (43) highestRated -> . HIGHF
    (44) highestRated -> . epsilon
    (55) epsilon -> .

    LMOVIE          shift and go to state 4
    HIGHF           shift and go to state 6
    similarMovLink  reduce using rule 55 (epsilon -> .)
    similarMov      reduce using rule 55 (epsilon -> .)
    LOWF            reduce using rule 55 (epsilon -> .)
    BDATE           reduce using rule 55 (epsilon -> .)
    CELEBRITY       reduce using rule 55 (epsilon -> .)
    MOVIELIST       reduce using rule 55 (epsilon -> .)
    MYEAR           reduce using rule 55 (epsilon -> .)

    start                          shift and go to state 1
    moviename                      shift and go to state 2
    highestRated                   shift and go to state 3
    epsilon                        shift and go to state 5

state 1

    (0) S' -> start .



state 2

    (1) start -> moviename . simMov whereTowatch storyline language director producer writer boxoffice runtime crew
    (6) simMov -> . simMov dmov
    (7) simMov -> . dmov
    (8) dmov -> . similarMovLink similarMov
    (9) dmov -> . similarMovLink epsilon
    (10) dmov -> . epsilon similarMov
    (55) epsilon -> .

    similarMovLink  shift and go to state 9
    similarMov      reduce using rule 55 (epsilon -> .)

    simMov                         shift and go to state 7
    dmov                           shift and go to state 8
    epsilon                        shift and go to state 10

state 3

    (2) start -> highestRated . lowestRated birthday exception movieList
    (3) start -> highestRated . lowestRated birthday movieList
    (45) lowestRated -> . LOWF
    (46) lowestRated -> . epsilon
    (55) epsilon -> .

    LOWF            shift and go to state 12
    BDATE           reduce using rule 55 (epsilon -> .)
    CELEBRITY       reduce using rule 55 (epsilon -> .)
    MOVIELIST       reduce using rule 55 (epsilon -> .)
    MYEAR           reduce using rule 55 (epsilon -> .)

    lowestRated                    shift and go to state 11
    epsilon                        shift and go to state 13

state 4

    (4) moviename -> LMOVIE .

    similarMovLink  reduce using rule 4 (moviename -> LMOVIE .)
    similarMov      reduce using rule 4 (moviename -> LMOVIE .)


state 5

    (5) moviename -> epsilon .
    (44) highestRated -> epsilon .

    similarMovLink  reduce using rule 5 (moviename -> epsilon .)
    similarMov      reduce using rule 5 (moviename -> epsilon .)
    LOWF            reduce using rule 44 (highestRated -> epsilon .)
    BDATE           reduce using rule 44 (highestRated -> epsilon .)
    CELEBRITY       reduce using rule 44 (highestRated -> epsilon .)
    MOVIELIST       reduce using rule 44 (highestRated -> epsilon .)
    MYEAR           reduce using rule 44 (highestRated -> epsilon .)


state 6

    (43) highestRated -> HIGHF .

    LOWF            reduce using rule 43 (highestRated -> HIGHF .)
    BDATE           reduce using rule 43 (highestRated -> HIGHF .)
    CELEBRITY       reduce using rule 43 (highestRated -> HIGHF .)
    MOVIELIST       reduce using rule 43 (highestRated -> HIGHF .)
    MYEAR           reduce using rule 43 (highestRated -> HIGHF .)


state 7

    (1) start -> moviename simMov . whereTowatch storyline language director producer writer boxoffice runtime crew
    (6) simMov -> simMov . dmov
    (11) whereTowatch -> . whereTowatch dwatch
    (12) whereTowatch -> . dwatch
    (8) dmov -> . similarMovLink similarMov
    (9) dmov -> . similarMovLink epsilon
    (10) dmov -> . epsilon similarMov
    (13) dwatch -> . onlineplatform
    (14) dwatch -> . epsilon
    (55) epsilon -> .

  ! shift/reduce conflict for onlineplatform resolved as shift
    similarMovLink  shift and go to state 9
    onlineplatform  shift and go to state 18
    similarMov      reduce using rule 55 (epsilon -> .)
    LSTORY          reduce using rule 55 (epsilon -> .)
    LLANGUAGE       reduce using rule 55 (epsilon -> .)
    LDIR            reduce using rule 55 (epsilon -> .)
    CELEBRITY       reduce using rule 55 (epsilon -> .)
    separator       reduce using rule 55 (epsilon -> .)
    BOXOFFICE       reduce using rule 55 (epsilon -> .)
    RUNTIME         reduce using rule 55 (epsilon -> .)
    LINK            reduce using rule 55 (epsilon -> .)
    ACTUALNAME      reduce using rule 55 (epsilon -> .)

  ! onlineplatform  [ reduce using rule 55 (epsilon -> .) ]

    whereTowatch                   shift and go to state 14
    dmov                           shift and go to state 15
    dwatch                         shift and go to state 16
    epsilon                        shift and go to state 17

state 8

    (7) simMov -> dmov .

    similarMovLink  reduce using rule 7 (simMov -> dmov .)
    onlineplatform  reduce using rule 7 (simMov -> dmov .)
    LSTORY          reduce using rule 7 (simMov -> dmov .)
    LLANGUAGE       reduce using rule 7 (simMov -> dmov .)
    LDIR            reduce using rule 7 (simMov -> dmov .)
    CELEBRITY       reduce using rule 7 (simMov -> dmov .)
    separator       reduce using rule 7 (simMov -> dmov .)
    BOXOFFICE       reduce using rule 7 (simMov -> dmov .)
    RUNTIME         reduce using rule 7 (simMov -> dmov .)
    LINK            reduce using rule 7 (simMov -> dmov .)
    ACTUALNAME      reduce using rule 7 (simMov -> dmov .)
    similarMov      reduce using rule 7 (simMov -> dmov .)


state 9

    (8) dmov -> similarMovLink . similarMov
    (9) dmov -> similarMovLink . epsilon
    (55) epsilon -> .

  ! shift/reduce conflict for similarMov resolved as shift
    similarMov      shift and go to state 19
    similarMovLink  reduce using rule 55 (epsilon -> .)
    onlineplatform  reduce using rule 55 (epsilon -> .)
    LSTORY          reduce using rule 55 (epsilon -> .)
    LLANGUAGE       reduce using rule 55 (epsilon -> .)
    LDIR            reduce using rule 55 (epsilon -> .)
    CELEBRITY       reduce using rule 55 (epsilon -> .)
    separator       reduce using rule 55 (epsilon -> .)
    BOXOFFICE       reduce using rule 55 (epsilon -> .)
    RUNTIME         reduce using rule 55 (epsilon -> .)
    LINK            reduce using rule 55 (epsilon -> .)
    ACTUALNAME      reduce using rule 55 (epsilon -> .)

  ! similarMov      [ reduce using rule 55 (epsilon -> .) ]

    epsilon                        shift and go to state 20

state 10

    (10) dmov -> epsilon . similarMov

    similarMov      shift and go to state 21


state 11

    (2) start -> highestRated lowestRated . birthday exception movieList
    (3) start -> highestRated lowestRated . birthday movieList
    (47) birthday -> . BDATE
    (48) birthday -> . epsilon
    (55) epsilon -> .

    BDATE           shift and go to state 23
    CELEBRITY       reduce using rule 55 (epsilon -> .)
    MOVIELIST       reduce using rule 55 (epsilon -> .)
    MYEAR           reduce using rule 55 (epsilon -> .)

    birthday                       shift and go to state 22
    epsilon                        shift and go to state 24

state 12

    (45) lowestRated -> LOWF .

    BDATE           reduce using rule 45 (lowestRated -> LOWF .)
    CELEBRITY       reduce using rule 45 (lowestRated -> LOWF .)
    MOVIELIST       reduce using rule 45 (lowestRated -> LOWF .)
    MYEAR           reduce using rule 45 (lowestRated -> LOWF .)


state 13

    (46) lowestRated -> epsilon .

    BDATE           reduce using rule 46 (lowestRated -> epsilon .)
    CELEBRITY       reduce using rule 46 (lowestRated -> epsilon .)
    MOVIELIST       reduce using rule 46 (lowestRated -> epsilon .)
    MYEAR           reduce using rule 46 (lowestRated -> epsilon .)


state 14

    (1) start -> moviename simMov whereTowatch . storyline language director producer writer boxoffice runtime crew
    (11) whereTowatch -> whereTowatch . dwatch
    (15) storyline -> . LSTORY
    (16) storyline -> . epsilon
    (13) dwatch -> . onlineplatform
    (14) dwatch -> . epsilon
    (55) epsilon -> .

  ! shift/reduce conflict for LSTORY resolved as shift
  ! shift/reduce conflict for onlineplatform resolved as shift
    LSTORY          shift and go to state 27
    onlineplatform  shift and go to state 18
    LLANGUAGE       reduce using rule 55 (epsilon -> .)
    LDIR            reduce using rule 55 (epsilon -> .)
    CELEBRITY       reduce using rule 55 (epsilon -> .)
    separator       reduce using rule 55 (epsilon -> .)
    BOXOFFICE       reduce using rule 55 (epsilon -> .)
    RUNTIME         reduce using rule 55 (epsilon -> .)
    LINK            reduce using rule 55 (epsilon -> .)
    ACTUALNAME      reduce using rule 55 (epsilon -> .)

  ! LSTORY          [ reduce using rule 55 (epsilon -> .) ]
  ! onlineplatform  [ reduce using rule 55 (epsilon -> .) ]

    storyline                      shift and go to state 25
    dwatch                         shift and go to state 26
    epsilon                        shift and go to state 28

state 15

    (6) simMov -> simMov dmov .

    similarMovLink  reduce using rule 6 (simMov -> simMov dmov .)
    onlineplatform  reduce using rule 6 (simMov -> simMov dmov .)
    LSTORY          reduce using rule 6 (simMov -> simMov dmov .)
    LLANGUAGE       reduce using rule 6 (simMov -> simMov dmov .)
    LDIR            reduce using rule 6 (simMov -> simMov dmov .)
    CELEBRITY       reduce using rule 6 (simMov -> simMov dmov .)
    separator       reduce using rule 6 (simMov -> simMov dmov .)
    BOXOFFICE       reduce using rule 6 (simMov -> simMov dmov .)
    RUNTIME         reduce using rule 6 (simMov -> simMov dmov .)
    LINK            reduce using rule 6 (simMov -> simMov dmov .)
    ACTUALNAME      reduce using rule 6 (simMov -> simMov dmov .)
    similarMov      reduce using rule 6 (simMov -> simMov dmov .)


state 16

    (12) whereTowatch -> dwatch .

    LSTORY          reduce using rule 12 (whereTowatch -> dwatch .)
    onlineplatform  reduce using rule 12 (whereTowatch -> dwatch .)
    LLANGUAGE       reduce using rule 12 (whereTowatch -> dwatch .)
    LDIR            reduce using rule 12 (whereTowatch -> dwatch .)
    CELEBRITY       reduce using rule 12 (whereTowatch -> dwatch .)
    separator       reduce using rule 12 (whereTowatch -> dwatch .)
    BOXOFFICE       reduce using rule 12 (whereTowatch -> dwatch .)
    RUNTIME         reduce using rule 12 (whereTowatch -> dwatch .)
    LINK            reduce using rule 12 (whereTowatch -> dwatch .)
    ACTUALNAME      reduce using rule 12 (whereTowatch -> dwatch .)


state 17

    (10) dmov -> epsilon . similarMov
    (14) dwatch -> epsilon .

    similarMov      shift and go to state 21
    LSTORY          reduce using rule 14 (dwatch -> epsilon .)
    onlineplatform  reduce using rule 14 (dwatch -> epsilon .)
    LLANGUAGE       reduce using rule 14 (dwatch -> epsilon .)
    LDIR            reduce using rule 14 (dwatch -> epsilon .)
    CELEBRITY       reduce using rule 14 (dwatch -> epsilon .)
    separator       reduce using rule 14 (dwatch -> epsilon .)
    BOXOFFICE       reduce using rule 14 (dwatch -> epsilon .)
    RUNTIME         reduce using rule 14 (dwatch -> epsilon .)
    LINK            reduce using rule 14 (dwatch -> epsilon .)
    ACTUALNAME      reduce using rule 14 (dwatch -> epsilon .)


state 18

    (13) dwatch -> onlineplatform .

    LSTORY          reduce using rule 13 (dwatch -> onlineplatform .)
    onlineplatform  reduce using rule 13 (dwatch -> onlineplatform .)
    LLANGUAGE       reduce using rule 13 (dwatch -> onlineplatform .)
    LDIR            reduce using rule 13 (dwatch -> onlineplatform .)
    CELEBRITY       reduce using rule 13 (dwatch -> onlineplatform .)
    separator       reduce using rule 13 (dwatch -> onlineplatform .)
    BOXOFFICE       reduce using rule 13 (dwatch -> onlineplatform .)
    RUNTIME         reduce using rule 13 (dwatch -> onlineplatform .)
    LINK            reduce using rule 13 (dwatch -> onlineplatform .)
    ACTUALNAME      reduce using rule 13 (dwatch -> onlineplatform .)


state 19

    (8) dmov -> similarMovLink similarMov .

    similarMovLink  reduce using rule 8 (dmov -> similarMovLink similarMov .)
    onlineplatform  reduce using rule 8 (dmov -> similarMovLink similarMov .)
    LSTORY          reduce using rule 8 (dmov -> similarMovLink similarMov .)
    LLANGUAGE       reduce using rule 8 (dmov -> similarMovLink similarMov .)
    LDIR            reduce using rule 8 (dmov -> similarMovLink similarMov .)
    CELEBRITY       reduce using rule 8 (dmov -> similarMovLink similarMov .)
    separator       reduce using rule 8 (dmov -> similarMovLink similarMov .)
    BOXOFFICE       reduce using rule 8 (dmov -> similarMovLink similarMov .)
    RUNTIME         reduce using rule 8 (dmov -> similarMovLink similarMov .)
    LINK            reduce using rule 8 (dmov -> similarMovLink similarMov .)
    ACTUALNAME      reduce using rule 8 (dmov -> similarMovLink similarMov .)
    similarMov      reduce using rule 8 (dmov -> similarMovLink similarMov .)


state 20

    (9) dmov -> similarMovLink epsilon .

    similarMovLink  reduce using rule 9 (dmov -> similarMovLink epsilon .)
    onlineplatform  reduce using rule 9 (dmov -> similarMovLink epsilon .)
    LSTORY          reduce using rule 9 (dmov -> similarMovLink epsilon .)
    LLANGUAGE       reduce using rule 9 (dmov -> similarMovLink epsilon .)
    LDIR            reduce using rule 9 (dmov -> similarMovLink epsilon .)
    CELEBRITY       reduce using rule 9 (dmov -> similarMovLink epsilon .)
    separator       reduce using rule 9 (dmov -> similarMovLink epsilon .)
    BOXOFFICE       reduce using rule 9 (dmov -> similarMovLink epsilon .)
    RUNTIME         reduce using rule 9 (dmov -> similarMovLink epsilon .)
    LINK            reduce using rule 9 (dmov -> similarMovLink epsilon .)
    ACTUALNAME      reduce using rule 9 (dmov -> similarMovLink epsilon .)
    similarMov      reduce using rule 9 (dmov -> similarMovLink epsilon .)


state 21

    (10) dmov -> epsilon similarMov .

    similarMovLink  reduce using rule 10 (dmov -> epsilon similarMov .)
    onlineplatform  reduce using rule 10 (dmov -> epsilon similarMov .)
    LSTORY          reduce using rule 10 (dmov -> epsilon similarMov .)
    LLANGUAGE       reduce using rule 10 (dmov -> epsilon similarMov .)
    LDIR            reduce using rule 10 (dmov -> epsilon similarMov .)
    CELEBRITY       reduce using rule 10 (dmov -> epsilon similarMov .)
    separator       reduce using rule 10 (dmov -> epsilon similarMov .)
    BOXOFFICE       reduce using rule 10 (dmov -> epsilon similarMov .)
    RUNTIME         reduce using rule 10 (dmov -> epsilon similarMov .)
    LINK            reduce using rule 10 (dmov -> epsilon similarMov .)
    ACTUALNAME      reduce using rule 10 (dmov -> epsilon similarMov .)
    similarMov      reduce using rule 10 (dmov -> epsilon similarMov .)


state 22

    (2) start -> highestRated lowestRated birthday . exception movieList
    (3) start -> highestRated lowestRated birthday . movieList
    (49) exception -> . CELEBRITY
    (50) movieList -> . mlist movieList
    (51) movieList -> . mlist
    (52) mlist -> . MOVIELIST MYEAR
    (53) mlist -> . MOVIELIST epsilon
    (54) mlist -> . epsilon MYEAR
    (55) epsilon -> .

    CELEBRITY       shift and go to state 31
    MOVIELIST       shift and go to state 33
    MYEAR           reduce using rule 55 (epsilon -> .)

    exception                      shift and go to state 29
    movieList                      shift and go to state 30
    mlist                          shift and go to state 32
    epsilon                        shift and go to state 34

state 23

    (47) birthday -> BDATE .

    CELEBRITY       reduce using rule 47 (birthday -> BDATE .)
    MOVIELIST       reduce using rule 47 (birthday -> BDATE .)
    MYEAR           reduce using rule 47 (birthday -> BDATE .)


state 24

    (48) birthday -> epsilon .

    CELEBRITY       reduce using rule 48 (birthday -> epsilon .)
    MOVIELIST       reduce using rule 48 (birthday -> epsilon .)
    MYEAR           reduce using rule 48 (birthday -> epsilon .)


state 25

    (1) start -> moviename simMov whereTowatch storyline . language director producer writer boxoffice runtime crew
    (17) language -> . LLANGUAGE
    (18) language -> . epsilon
    (55) epsilon -> .

    LLANGUAGE       shift and go to state 36
    LDIR            reduce using rule 55 (epsilon -> .)
    CELEBRITY       reduce using rule 55 (epsilon -> .)
    separator       reduce using rule 55 (epsilon -> .)
    BOXOFFICE       reduce using rule 55 (epsilon -> .)
    RUNTIME         reduce using rule 55 (epsilon -> .)
    LINK            reduce using rule 55 (epsilon -> .)
    ACTUALNAME      reduce using rule 55 (epsilon -> .)

    language                       shift and go to state 35
    epsilon                        shift and go to state 37

state 26

    (11) whereTowatch -> whereTowatch dwatch .

    LSTORY          reduce using rule 11 (whereTowatch -> whereTowatch dwatch .)
    onlineplatform  reduce using rule 11 (whereTowatch -> whereTowatch dwatch .)
    LLANGUAGE       reduce using rule 11 (whereTowatch -> whereTowatch dwatch .)
    LDIR            reduce using rule 11 (whereTowatch -> whereTowatch dwatch .)
    CELEBRITY       reduce using rule 11 (whereTowatch -> whereTowatch dwatch .)
    separator       reduce using rule 11 (whereTowatch -> whereTowatch dwatch .)
    BOXOFFICE       reduce using rule 11 (whereTowatch -> whereTowatch dwatch .)
    RUNTIME         reduce using rule 11 (whereTowatch -> whereTowatch dwatch .)
    LINK            reduce using rule 11 (whereTowatch -> whereTowatch dwatch .)
    ACTUALNAME      reduce using rule 11 (whereTowatch -> whereTowatch dwatch .)


state 27

    (15) storyline -> LSTORY .

    LLANGUAGE       reduce using rule 15 (storyline -> LSTORY .)
    LDIR            reduce using rule 15 (storyline -> LSTORY .)
    CELEBRITY       reduce using rule 15 (storyline -> LSTORY .)
    separator       reduce using rule 15 (storyline -> LSTORY .)
    BOXOFFICE       reduce using rule 15 (storyline -> LSTORY .)
    RUNTIME         reduce using rule 15 (storyline -> LSTORY .)
    LINK            reduce using rule 15 (storyline -> LSTORY .)
    ACTUALNAME      reduce using rule 15 (storyline -> LSTORY .)


state 28

    (16) storyline -> epsilon .
    (14) dwatch -> epsilon .

  ! reduce/reduce conflict for LLANGUAGE resolved using rule 14 (dwatch -> epsilon .)
  ! reduce/reduce conflict for LDIR resolved using rule 14 (dwatch -> epsilon .)
  ! reduce/reduce conflict for CELEBRITY resolved using rule 14 (dwatch -> epsilon .)
  ! reduce/reduce conflict for separator resolved using rule 14 (dwatch -> epsilon .)
  ! reduce/reduce conflict for BOXOFFICE resolved using rule 14 (dwatch -> epsilon .)
  ! reduce/reduce conflict for RUNTIME resolved using rule 14 (dwatch -> epsilon .)
  ! reduce/reduce conflict for LINK resolved using rule 14 (dwatch -> epsilon .)
  ! reduce/reduce conflict for ACTUALNAME resolved using rule 14 (dwatch -> epsilon .)
    LSTORY          reduce using rule 14 (dwatch -> epsilon .)
    onlineplatform  reduce using rule 14 (dwatch -> epsilon .)
    LLANGUAGE       reduce using rule 14 (dwatch -> epsilon .)
    LDIR            reduce using rule 14 (dwatch -> epsilon .)
    CELEBRITY       reduce using rule 14 (dwatch -> epsilon .)
    separator       reduce using rule 14 (dwatch -> epsilon .)
    BOXOFFICE       reduce using rule 14 (dwatch -> epsilon .)
    RUNTIME         reduce using rule 14 (dwatch -> epsilon .)
    LINK            reduce using rule 14 (dwatch -> epsilon .)
    ACTUALNAME      reduce using rule 14 (dwatch -> epsilon .)

  ! LLANGUAGE       [ reduce using rule 16 (storyline -> epsilon .) ]
  ! LDIR            [ reduce using rule 16 (storyline -> epsilon .) ]
  ! CELEBRITY       [ reduce using rule 16 (storyline -> epsilon .) ]
  ! separator       [ reduce using rule 16 (storyline -> epsilon .) ]
  ! BOXOFFICE       [ reduce using rule 16 (storyline -> epsilon .) ]
  ! RUNTIME         [ reduce using rule 16 (storyline -> epsilon .) ]
  ! LINK            [ reduce using rule 16 (storyline -> epsilon .) ]
  ! ACTUALNAME      [ reduce using rule 16 (storyline -> epsilon .) ]


state 29

    (2) start -> highestRated lowestRated birthday exception . movieList
    (50) movieList -> . mlist movieList
    (51) movieList -> . mlist
    (52) mlist -> . MOVIELIST MYEAR
    (53) mlist -> . MOVIELIST epsilon
    (54) mlist -> . epsilon MYEAR
    (55) epsilon -> .

    MOVIELIST       shift and go to state 33
    MYEAR           reduce using rule 55 (epsilon -> .)

    movieList                      shift and go to state 38
    mlist                          shift and go to state 32
    epsilon                        shift and go to state 34

state 30

    (3) start -> highestRated lowestRated birthday movieList .

    $end            reduce using rule 3 (start -> highestRated lowestRated birthday movieList .)


state 31

    (49) exception -> CELEBRITY .

    MOVIELIST       reduce using rule 49 (exception -> CELEBRITY .)
    MYEAR           reduce using rule 49 (exception -> CELEBRITY .)


state 32

    (50) movieList -> mlist . movieList
    (51) movieList -> mlist .
    (50) movieList -> . mlist movieList
    (51) movieList -> . mlist
    (52) mlist -> . MOVIELIST MYEAR
    (53) mlist -> . MOVIELIST epsilon
    (54) mlist -> . epsilon MYEAR
    (55) epsilon -> .

    $end            reduce using rule 51 (movieList -> mlist .)
    MOVIELIST       shift and go to state 33
    MYEAR           reduce using rule 55 (epsilon -> .)

    mlist                          shift and go to state 32
    movieList                      shift and go to state 39
    epsilon                        shift and go to state 34

state 33

    (52) mlist -> MOVIELIST . MYEAR
    (53) mlist -> MOVIELIST . epsilon
    (55) epsilon -> .

  ! shift/reduce conflict for MYEAR resolved as shift
    MYEAR           shift and go to state 40
    MOVIELIST       reduce using rule 55 (epsilon -> .)
    $end            reduce using rule 55 (epsilon -> .)

  ! MYEAR           [ reduce using rule 55 (epsilon -> .) ]

    epsilon                        shift and go to state 41

state 34

    (54) mlist -> epsilon . MYEAR

    MYEAR           shift and go to state 42


state 35

    (1) start -> moviename simMov whereTowatch storyline language . director producer writer boxoffice runtime crew
    (19) director -> . director dval
    (20) director -> . dval
    (21) dval -> . LDIR
    (22) dval -> . epsilon
    (55) epsilon -> .

  ! shift/reduce conflict for LDIR resolved as shift
    LDIR            shift and go to state 45
    CELEBRITY       reduce using rule 55 (epsilon -> .)
    separator       reduce using rule 55 (epsilon -> .)
    BOXOFFICE       reduce using rule 55 (epsilon -> .)
    RUNTIME         reduce using rule 55 (epsilon -> .)
    LINK            reduce using rule 55 (epsilon -> .)
    ACTUALNAME      reduce using rule 55 (epsilon -> .)

  ! LDIR            [ reduce using rule 55 (epsilon -> .) ]

    director                       shift and go to state 43
    dval                           shift and go to state 44
    epsilon                        shift and go to state 46

state 36

    (17) language -> LLANGUAGE .

    LDIR            reduce using rule 17 (language -> LLANGUAGE .)
    CELEBRITY       reduce using rule 17 (language -> LLANGUAGE .)
    separator       reduce using rule 17 (language -> LLANGUAGE .)
    BOXOFFICE       reduce using rule 17 (language -> LLANGUAGE .)
    RUNTIME         reduce using rule 17 (language -> LLANGUAGE .)
    LINK            reduce using rule 17 (language -> LLANGUAGE .)
    ACTUALNAME      reduce using rule 17 (language -> LLANGUAGE .)


state 37

    (18) language -> epsilon .

    LDIR            reduce using rule 18 (language -> epsilon .)
    CELEBRITY       reduce using rule 18 (language -> epsilon .)
    separator       reduce using rule 18 (language -> epsilon .)
    BOXOFFICE       reduce using rule 18 (language -> epsilon .)
    RUNTIME         reduce using rule 18 (language -> epsilon .)
    LINK            reduce using rule 18 (language -> epsilon .)
    ACTUALNAME      reduce using rule 18 (language -> epsilon .)


state 38

    (2) start -> highestRated lowestRated birthday exception movieList .

    $end            reduce using rule 2 (start -> highestRated lowestRated birthday exception movieList .)


state 39

    (50) movieList -> mlist movieList .

    $end            reduce using rule 50 (movieList -> mlist movieList .)


state 40

    (52) mlist -> MOVIELIST MYEAR .

    MOVIELIST       reduce using rule 52 (mlist -> MOVIELIST MYEAR .)
    MYEAR           reduce using rule 52 (mlist -> MOVIELIST MYEAR .)
    $end            reduce using rule 52 (mlist -> MOVIELIST MYEAR .)


state 41

    (53) mlist -> MOVIELIST epsilon .

    MOVIELIST       reduce using rule 53 (mlist -> MOVIELIST epsilon .)
    MYEAR           reduce using rule 53 (mlist -> MOVIELIST epsilon .)
    $end            reduce using rule 53 (mlist -> MOVIELIST epsilon .)


state 42

    (54) mlist -> epsilon MYEAR .

    MOVIELIST       reduce using rule 54 (mlist -> epsilon MYEAR .)
    MYEAR           reduce using rule 54 (mlist -> epsilon MYEAR .)
    $end            reduce using rule 54 (mlist -> epsilon MYEAR .)


state 43

    (1) start -> moviename simMov whereTowatch storyline language director . producer writer boxoffice runtime crew
    (19) director -> director . dval
    (23) producer -> . lprod producer
    (24) producer -> . lprod
    (21) dval -> . LDIR
    (22) dval -> . epsilon
    (30) lprod -> . CELEBRITY
    (31) lprod -> . epsilon
    (55) epsilon -> .

  ! shift/reduce conflict for LDIR resolved as shift
  ! shift/reduce conflict for CELEBRITY resolved as shift
    LDIR            shift and go to state 45
    CELEBRITY       shift and go to state 51
    separator       reduce using rule 55 (epsilon -> .)
    BOXOFFICE       reduce using rule 55 (epsilon -> .)
    RUNTIME         reduce using rule 55 (epsilon -> .)
    LINK            reduce using rule 55 (epsilon -> .)
    ACTUALNAME      reduce using rule 55 (epsilon -> .)

  ! LDIR            [ reduce using rule 55 (epsilon -> .) ]
  ! CELEBRITY       [ reduce using rule 55 (epsilon -> .) ]

    producer                       shift and go to state 47
    dval                           shift and go to state 48
    lprod                          shift and go to state 49
    epsilon                        shift and go to state 50

state 44

    (20) director -> dval .

    LDIR            reduce using rule 20 (director -> dval .)
    CELEBRITY       reduce using rule 20 (director -> dval .)
    separator       reduce using rule 20 (director -> dval .)
    BOXOFFICE       reduce using rule 20 (director -> dval .)
    RUNTIME         reduce using rule 20 (director -> dval .)
    LINK            reduce using rule 20 (director -> dval .)
    ACTUALNAME      reduce using rule 20 (director -> dval .)


state 45

    (21) dval -> LDIR .

    LDIR            reduce using rule 21 (dval -> LDIR .)
    CELEBRITY       reduce using rule 21 (dval -> LDIR .)
    separator       reduce using rule 21 (dval -> LDIR .)
    BOXOFFICE       reduce using rule 21 (dval -> LDIR .)
    RUNTIME         reduce using rule 21 (dval -> LDIR .)
    LINK            reduce using rule 21 (dval -> LDIR .)
    ACTUALNAME      reduce using rule 21 (dval -> LDIR .)


state 46

    (22) dval -> epsilon .

    LDIR            reduce using rule 22 (dval -> epsilon .)
    CELEBRITY       reduce using rule 22 (dval -> epsilon .)
    separator       reduce using rule 22 (dval -> epsilon .)
    BOXOFFICE       reduce using rule 22 (dval -> epsilon .)
    RUNTIME         reduce using rule 22 (dval -> epsilon .)
    LINK            reduce using rule 22 (dval -> epsilon .)
    ACTUALNAME      reduce using rule 22 (dval -> epsilon .)


state 47

    (1) start -> moviename simMov whereTowatch storyline language director producer . writer boxoffice runtime crew
    (25) writer -> . separator lwrite writer
    (26) writer -> . lwrite writer
    (27) writer -> . lwrite
    (28) lwrite -> . CELEBRITY
    (29) lwrite -> . epsilon
    (55) epsilon -> .

  ! shift/reduce conflict for separator resolved as shift
  ! shift/reduce conflict for CELEBRITY resolved as shift
    separator       shift and go to state 53
    CELEBRITY       shift and go to state 55
    BOXOFFICE       reduce using rule 55 (epsilon -> .)
    RUNTIME         reduce using rule 55 (epsilon -> .)
    LINK            reduce using rule 55 (epsilon -> .)
    ACTUALNAME      reduce using rule 55 (epsilon -> .)
